--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhSO0u0q8kiKW929W6EMOB",
+      "authorship_tag": "ABX9TyNchmTmfHUkX3FQQh95AgSB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,14 +49,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "09c3791b-ec82-40fc-d346-dca91320cdc2"
+        "outputId": "f0f75026-eb97-4dd6-cb5f-e0ad0783ff7b"
       },
       "source": [
         "drinks = pd.read_csv('https://raw.githubusercontent.com/cyphr0st/infosec/master/data2/drinks.csv')\n",
         "\n",
         "type(drinks)"
       ],
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -68,7 +68,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 21
         }
       ]
     },
@@ -81,12 +81,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 439
         },
-        "outputId": "a6723619-ec6e-4c74-e640-48dbf7f117e9"
+        "outputId": "bbb1979a-7a65-45b5-96d7-ca02a46bd9dd"
       },
       "source": [
         "drinks"
       ],
-      "execution_count": 18,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +243,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 22
         }
       ]
     },
@@ -468,12 +468,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "d4d4f3ee-f69e-4bad-fd08-c4430f186133"
+        "outputId": "5c215e1d-483a-4c73-a09a-9b36eba1a0ab"
       },
       "source": [
-        "drinks.columns"
+        "drinks.co\n",
+        "lumns"
       ],
-      "execution_count": 15,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +488,108 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QjLn8-fJULEP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "08ac1858-cebc-495f-e8b9-00aca30740ca"
+      },
+      "source": [
+        "d = {'a':[1,2], 'b':[3,4]}\n",
+        "pd.DataFrame(d)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>a</th>\n",
+              "      <th>b</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   a  b\n",
+              "0  1  3\n",
+              "1  2  4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NQB1FogaUS0h",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f1874ee8-f9b9-4d0f-e3f3-126fc2541ab1"
+      },
+      "source": [
+        "drinks.shape"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(193, 6)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
         }
       ]
     }
